@@ -945,9 +945,8 @@ public class TweetFragment extends Fragment {
                     startActivityForResult(captureIntent, CAPTURE_IMAGE);
                 } else { // attach picture
                     if (attachedUri == null || attachedUri.equals("")) {
-                        Intent photoPickerIntent = new Intent();
+                        Intent photoPickerIntent = new Intent(Intent.ACTION_PICK);
                         photoPickerIntent.setType("image/*");
-                        photoPickerIntent.setAction(Intent.ACTION_GET_CONTENT);
                         try {
                             startActivityForResult(Intent.createChooser(photoPickerIntent,
                                     "Select Picture"), SELECT_PHOTO);
@@ -963,30 +962,16 @@ public class TweetFragment extends Fragment {
                         a.recycle();
                         attachImage.setImageDrawable(context.getResources().getDrawable(resource));
 
-                        //if (Build.VERSION.SDK_INT < 19) {
-                            Intent photoPickerIntent = new Intent();
-                            photoPickerIntent.setType("image/*");
-                            photoPickerIntent.setAction(Intent.ACTION_GET_CONTENT);
-                            try {
-                                startActivityForResult(Intent.createChooser(photoPickerIntent,
-                                        "Select Picture"), SELECT_PHOTO);
-                            } catch (Throwable t) {
-                                // no app to preform this..? hmm, tell them that I guess
-                                Toast.makeText(context, "No app available to select pictures!", Toast.LENGTH_SHORT).show();
-                            }
-                        /*} else {
-                            Intent intent = new Intent(Intent.ACTION_OPEN_DOCUMENT);
-                            intent.addCategory(Intent.CATEGORY_OPENABLE);
-                            intent.setType("image/*");
-                            try {
-                                startActivityForResult(Intent.createChooser(intent,
-                                        "Select Picture"), SELECT_PHOTO);
-                            } catch (Throwable t) {
-                                // no app to preform this..? hmm, tell them that I guess
-                                Toast.makeText(context, "No app available to select pictures!", Toast.LENGTH_SHORT).show();
-                            }
-                        }*/
+                        Intent photoPickerIntent = new Intent(Intent.ACTION_PICK);
+                        photoPickerIntent.setType("image/*");
 
+                        try {
+                            startActivityForResult(Intent.createChooser(photoPickerIntent,
+                                    "Select Picture"), SELECT_PHOTO);
+                        } catch (Throwable t) {
+                            // no app to preform this..? hmm, tell them that I guess
+                            Toast.makeText(context, "No app available to select pictures!", Toast.LENGTH_SHORT).show();
+                        }
                     }
                 }
             }
